--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
 
-  <script url("/js/main.js")></script>
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
